--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.9",
     "nodemon": "^2.0.6",
-    "socket.io": "^3.0.5"
+    "socket.io": "^3.0.5",
+    "uuid": "^8.3.2"
   }
 }
